--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: CI
 
 on: [push]
 
@@ -10,8 +10,8 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build
-      run:
-      - cd api
-      - cargo build --verbose
+      run: |
+        cd api
+        cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
