--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,8 @@
   "author": "Enok",
   "license": "MIT",
   "scripts": {
-    "start": "parcel src/index.html --open"
+    "start": "parcel src/index.html --open",
+    "build": "parcel build src/index.html"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.3",
