--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: nightly
         override: true
+        
     - name: Build
       run: |
         cd api
         cargo build --verbose
+        
     - name: Run tests
-      run: cargo test --verbose
+      run: |
+        cd api
+        cargo test --verbose
