--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,23 +4,33 @@ on: [push]
 
 jobs:
   build-api:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: nightly
-        override: true
-        
-    - name: Build
-      run: |
-        cd api
-        cargo build --verbose
-        
-    - name: Run tests
-      run: |
-        cd api
-        cargo test --verbose
+      - uses: actions/checkout@v1
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
+
+      - name: Build
+        run: |
+          cd api
+          cargo build --verbose
+
+      - name: Run tests
+        run: |
+          cd api
+          cargo test --verbose
+
+  build-web:
+    steps:
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - name: Build
+        run: |
+          cd web
+          yarn
+          yarn build
