--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,17 +8,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
           override: true
-
       - name: Build
         run: |
           cd api
           cargo build --verbose
-
       - name: Run tests
         run: |
           cd api
@@ -28,7 +25,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-
       - uses: actions/setup-node@v1
         with:
           node-version: 12.x
@@ -37,3 +33,16 @@ jobs:
           cd web
           yarn
           yarn build
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: [build-api, build-web]
+    steps:
+      - name: Build Image
+      env:
+        DOCKER_USER: ${{ secrets.DOCKER_USER }}
+        DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
+      - run: |
+          docker login -u $DOCKER_USER -p $DOCKER_PASS registry.cn-hongkong.aliyuncs.com
+          docker build ./ -t registry.cn-hongkong.aliyuncs.com/enok/beauty
+          docker push registry.cn-hongkong.aliyuncs.com/enok/beauty
