restore ci script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,6 @@ jobs:
         with:
           toolchain: nightly
           override: true
-      - uses: actions/download-artifact@master
-        with:
-          name: api-target
-          path: api/target
       - name: Build
         run: |
           cd api
@@ -26,8 +22,8 @@ jobs:
           cargo test --verbose
       - uses: actions/upload-artifact@master
         with:
-          name: api-target
-          path: api/target
+          name: api-server
+          path: api/target/reloaese/beauty
 
   build-web:
     runs-on: ubuntu-latest
@@ -57,8 +53,8 @@ jobs:
           path: web/dist
       - uses: actions/download-artifact@master
         with:
-          name: api-target
-          path: api/target
+          name: api-server
+          path: api/target/reloaese/beauty
       - name: Build Image
         env:
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
