--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
           cargo test --verbose
       - uses: actions/upload-artifact@master
         with:
-          name: api-server
-          path: api/target/reloaese/beauty
+          name: api-target
+          path: api/target
 
   build-web:
     runs-on: ubuntu-latest
@@ -53,8 +53,8 @@ jobs:
           path: web/dist
       - uses: actions/download-artifact@master
         with:
-          name: api-server
-          path: api/target/relaese/beauty
+          name: api-target
+          path: api/target
       - name: Build Image
         env:
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
