--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,19 +11,20 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
+          target: x86_64-unknown-linux-musl
           override: true
       - name: Build
         run: |
           cd api
-          cargo build --release --verbose
+          cargo build --release --verbose --target x86_64-unknown-linux-musl
       - name: Run tests
         run: |
           cd api
           cargo test --verbose
       - uses: actions/upload-artifact@master
         with:
-          name: api-target
-          path: api/target
+          name: api-server
+          path: api/target/release/beauty
 
   build-web:
     runs-on: ubuntu-latest
@@ -53,8 +54,8 @@ jobs:
           path: web/dist
       - uses: actions/download-artifact@master
         with:
-          name: api-target
-          path: api/target
+          name: api-server
+          path: api/target/release/beauty
       - name: Build Image
         env:
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
