--- a/web/package.json
+++ b/web/package.json
@@ -35,8 +35,9 @@
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
     "@types/react-router": "^5.1.1",
+    "@types/react-router-dom": "^5.1.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-router": "^5.1.1"
+    "react-router-dom": "^5.1.2"
   }
 }
