--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react": "^7.15.1",
     "husky": "^3.0.7",
     "jest": "^24.9.0",
+    "less": "^3.10.3",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2",
     "ts-jest": "^24.1.0",
