--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "author": "Enok",
   "license": "MIT",
   "scripts": {
-    "start": "parcel src/index.html --open",
+    "start": "node ./server.js",
     "build": "parcel build src/index.html",
     "test": "jest",
     "lint": "eslint src --fix --ext .ts,.tsx"
@@ -37,6 +37,9 @@
     "@types/react-dom": "^16.9.1",
     "@types/react-router": "^5.1.1",
     "@types/react-router-dom": "^5.1.0",
+    "axios": "^0.19.0",
+    "http-proxy-middleware": "^0.20.0",
+    "parcel-proxy-server": "^1.1.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-router-dom": "^5.1.2"
